--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -563,7 +563,7 @@ h6 {
 }
 
 #hero h2 {
-	width: 80%;
+	max-width: 500px;
 	font-family: "Mukta", serif; /* home page description font */
 	color: rgb(119, 119, 119);
 	line-height: 35px;
